--- a/index.html
+++ b/index.html
@@ -8,22 +8,29 @@
 
   <body>
 
-<div>
+<div id="header">
 <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg"/>
 <p id="my-times">My Times</p>
-</div>
 
-<nav class="nav-out-top">
+<div>
+<nav>
   <ul>
-  <li><a href="#">World</a></li>
-  <li><a href="#">U.S.</a></li>
-  <li><a href="#">Tech</a></li>
-  <li><a href="#">Science</a></li>
+  <span id="top"><a href="#">World</a></span>
+  <span id="top"><a href="#">U.S.</a></span>
+  <span id="top"><a href="#">Tech</a></span>
+  <span id="top"><a href="#">Science</a></span>
   </ul>
 </nav>
+</div>
+</div>
 
+<div id="content">
+
+<div class="column large">
 <div id="mother">
-<h1>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h1>
+  <div id="content">
+    <h1>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h1>
+  </div>
 </div>
 
 <div>
@@ -47,7 +54,10 @@
 <div id="Research">
 <h3>Research Shows Cameras Erase Memory</h3>
 </div>
+</div>
 
+
+<div class="column medium">
 <div>
 <h2>FBI Finds Action Star Guilty of False Advertising</h2>
 <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
@@ -60,9 +70,14 @@
 <div>
 <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
 </div>
+</div>
 
-<div>
+<div class="column small">
+  <div>
   <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png"/>
+</div>
+
+  <div id="news">
 <h4>NEWS BITES</h4>
 Cat Emoji Goes Viral
 Buy Youtube Views
@@ -71,18 +86,20 @@ Advertising Internet Online
 Illustration in Marketing Materials
 Finally a Top Secret Way You Can
 </div>
+</div>
 
-<nav class="nav-out-bottom">
+</div>
+
+<nav class="bottom">
   <ul>
-  <li><a href="#">World</a></li>
-  <li><a href="#">U.S.</a></li>
-  <li><a href="#">Tech</a></li>
-  <li><a href="#">Science</a></li>
-</ul>
+  <span><a href="#">World</a></span>
+  <span><a href="#">U.S.</a></span>
+  <span><a href="#">Tech</a></span>
+  <span><a href="#">Science</a></span>
+  </ul>
 </nav>
 
 <h5>© 2016, My Times (A Division of Codecademy bite)</h5>
-
 
   </body>
 </html>
