--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
 
 <div class="column large">
 <div id="mother">
-  <div id="content">
     <h1>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h1>
-  </div>
 </div>
 
 <div>
@@ -51,7 +49,7 @@
 <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
 </div>
 
-<div id="Research">
+<div id="research">
 <h3>Research Shows Cameras Erase Memory</h3>
 </div>
 </div>
