Update Bites and footer
Project 70% done with issues!!!

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <div>
 <nav>
   <ul>
-  <span id="top"><a href="#">World</a></span>
-  <span id="top"><a href="#">U.S.</a></span>
-  <span id="top"><a href="#">Tech</a></span>
-  <span id="top"><a href="#">Science</a></span>
+  <span class="top"><a href="#">World</a></span>
+  <span class="top"><a href="#">U.S.</a></span>
+  <span class="top"><a href="#">Tech</a></span>
+  <span class="top"><a href="#">Science</a></span>
   </ul>
 </nav>
 </div>
@@ -84,27 +84,30 @@
 
   <div id="news">
 <h4>NEWS BITES</h4>
-Cat Emoji Goes Viral
-Buy Youtube Views
-Home Business Advertising Ideas
-Advertising Internet Online
-Illustration in Marketing Materials
-Finally a Top Secret Way You Can
+<span class = "bites">Cat Emoji Goes Viral</span>
+<span class = "bites">Buy Youtube Views</span>
+<span class = "bites">Home Business Advertising Ideas</span>
+<span class = "bites">Advertising Internet Online</span>
+<span class = "bites">Illustration in Marketing Materials</span>
+<span class = "bites">Finally a Top Secret Way You Can</span>
+</div>
 </div>
 </div>
 
-</div>
 
-<nav class="bottom">
+<div class="footer">
+  <div class="footerblock">
+<span class ="mytimes">My Times</span>
+<nav >
   <ul>
-  <span><a href="#">World</a></span>
-  <span><a href="#">U.S.</a></span>
-  <span><a href="#">Tech</a></span>
-  <span><a href="#">Science</a></span>
+  <span class="bottom"><a href="#">World</a></span>
+  <span class="bottom"><a href="#">U.S.</a></span>
+  <span class="bottom"><a href="#">Tech</a></span>
+  <span class="bottom"><a href="#">Science</a></span>
   </ul>
 </nav>
-
-<h5>© 2016, My Times (A Division of Codecademy bite)</h5>
-
+</div>
+<h5>© 2016, (A Division of Codecademy bite)</h5>
+</div>
   </body>
 </html>
